// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=default",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:bg-primary/90",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "border",
    "border-transparent",
    "dark:aria-invalid:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-primary-foreground",
    "text-xs",
    "transition-[color,box-shadow]",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=destructive — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=destructive",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:bg-destructive/90",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "border",
    "border-transparent",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-white",
    "text-xs",
    "transition-[color,box-shadow]",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=ghost — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=ghost",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:bg-accent",
    "[a&]:hover:text-accent-foreground",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-transparent",
    "dark:aria-invalid:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-xs",
    "transition-[color,box-shadow]",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=link — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=link",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:underline",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-transparent",
    "dark:aria-invalid:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-primary",
    "text-xs",
    "transition-[color,box-shadow]",
    "underline-offset-4",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=outline — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=outline",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:bg-accent",
    "[a&]:hover:text-accent-foreground",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-border",
    "dark:aria-invalid:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-foreground",
    "text-xs",
    "transition-[color,box-shadow]",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Badge primitive: every variant keeps its non-font fingerprint (Req 3.4) > Badge variant=secondary — non-font baseline 1`] = `
{
  "attrs": [
    "data-slot=badge",
    "data-variant=secondary",
  ],
  "classes": [
    "[&>svg]:pointer-events-none",
    "[&>svg]:size-3",
    "[a&]:hover:bg-secondary/90",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "border",
    "border-transparent",
    "dark:aria-invalid:ring-destructive/40",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "inline-flex",
    "items-center",
    "justify-center",
    "overflow-hidden",
    "px-2",
    "py-0.5",
    "rounded-full",
    "shrink-0",
    "text-secondary-foreground",
    "text-xs",
    "transition-[color,box-shadow]",
    "w-fit",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-primary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=default size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=default",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-primary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-primary/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-primary-foreground",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "text-white",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=destructive size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=destructive",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-destructive",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-destructive/60",
    "dark:focus-visible:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-destructive/20",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-destructive/90",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-white",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=ghost size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=ghost",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "dark:hover:bg-accent/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "size-9",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "size-10",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "size-8",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "size-6",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "text-cocoa-dark",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=gold size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=gold",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-warm-gold",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-deep-gold",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shadow-[0_1px_2px_rgba(26,15,10,0.08)]",
    "shrink-0",
    "text-cocoa-dark",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-primary",
    "text-sm",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=link size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=link",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:underline",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-primary",
    "text-xs",
    "transition-all",
    "underline-offset-4",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-canvas-white",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=onDark size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=onDark",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "active:scale-[0.97]",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "border",
    "border-canvas-white/25",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-canvas-white/10",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-canvas-white",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "size-9",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "size-10",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "size-8",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "size-6",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=outline size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=outline",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-background",
    "border",
    "dark:aria-invalid:ring-destructive/40",
    "dark:bg-input/30",
    "dark:border-input",
    "dark:hover:bg-input/50",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-accent",
    "hover:text-accent-foreground",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shadow-xs",
    "shrink-0",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=default — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=default",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-9",
    "has-[>svg]:px-3",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-4",
    "py-2",
    "rounded-md",
    "shrink-0",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=icon — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-9",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=icon-lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-lg",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-10",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=icon-sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-sm",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-8",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=icon-xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=icon-xs",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "rounded-md",
    "shrink-0",
    "size-6",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=lg — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=lg",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-2",
    "h-10",
    "has-[>svg]:px-4",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-6",
    "rounded-md",
    "shrink-0",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=sm — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=sm",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-4",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1.5",
    "h-8",
    "has-[>svg]:px-2.5",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-3",
    "rounded-md",
    "shrink-0",
    "text-secondary-foreground",
    "text-sm",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;

exports[`Font consistency — Preservation (Property 2) > Button primitive: every variant × size keeps its non-font fingerprint (Req 3.4) > Button variant=secondary size=xs — non-font baseline 1`] = `
{
  "attrs": [
    "data-size=xs",
    "data-slot=button",
    "data-variant=secondary",
  ],
  "classes": [
    "[&_svg:not([class*='size-'])]:size-3",
    "[&_svg]:pointer-events-none",
    "[&_svg]:shrink-0",
    "aria-invalid:border-destructive",
    "aria-invalid:ring-destructive/20",
    "bg-secondary",
    "dark:aria-invalid:ring-destructive/40",
    "disabled:opacity-50",
    "disabled:pointer-events-none",
    "focus-visible:border-ring",
    "focus-visible:ring-[3px]",
    "focus-visible:ring-ring/50",
    "font-medium",
    "gap-1",
    "h-6",
    "has-[>svg]:px-1.5",
    "hover:bg-secondary/80",
    "inline-flex",
    "items-center",
    "justify-center",
    "outline-none",
    "px-2",
    "rounded-md",
    "shrink-0",
    "text-secondary-foreground",
    "text-xs",
    "transition-all",
    "whitespace-nowrap",
  ],
}
`;
